<resources>
    <string name="app_name">IFT1155_Projet</string>
    <string name="basse">Basse</string>
    <string name="moyenne">Moyenne</string>
    <string name="haute">Haute</string>
    <string name="certains_champs_ne_sont_pas_remplis">Certains champs ne sont pas remplis !</string>
    <string name="creation">Creation</string>
    <string name="tous">Tous</string>
    <string name="active">Active</string>
    <string name="fermer">Fermer</string>
    <string name="auteur">"Auteur : "</string>
    <string name="description">"Description : "</string>
    <string name="date_de_cr_ation">"Date de création : "</string>
    <string name="date_ch_ance">"Date échéance : "</string>
    <string name="jours_restant">"Jours restant : "</string>
    <string name="minutes_restantes">"Minutes restantes : "</string>
    <string name="temps_restant_en_retard">Temps restant : EN RETARD</string>
    <string name="heures_restantes">"Heures restantes : "</string>
    <string name="priorit_basse">Priorité : Basse</string>
    <string name="priorit_moyenne">Priorité : Moyenne</string>
    <string name="priorit_haute">Priorité : Haute</string>
    <string name="r_ouvrir_la_t_che">Réouvrir la tâche</string>
    <string name="la_t_che_est_d_sormais_active">La tâche est désormais active !</string>
    <string name="prioriter">Prioriter</string>
    <string name="t_tcr_ation_d_une_t_che">\t\tCréation d\'une tâche</string>
    <string name="titre_de_votre_t_che">Titre de votre tâche</string>
    <string name="titre">Titre</string>
    <string name="auteur_de_la_demande">Auteur de la demande</string>
    <string name="importance">Importance</string>
    <string name="choisir_votre_date">Choisir votre date</string>
    <string name="ajouter_une_t_che">Ajouter une tâche</string>
    <string name="t_tliste_de_vos_t_ches">\t\tListe de vos tâches</string>
    <string name="t_tmodification_d_une_t_che">\t\tModification d\'une tâche</string>
    <string name="modifier_une_t_che">Modifier une tâche</string>
    <string name="ajouter_mon_calendrier">Ajouter à mon calendrier</string>
    <string name="modifier">Modifier</string>
    <string name="filtrer">Filtrer</string>
    <string name="fermer2">Fermer</string>
</resources>