<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"  >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/black"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:src="@drawable/close_line"
            android:layout_gravity="center"
            android:onClick="fermer"/>

    </LinearLayout>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#0278B5"
        android:fontFamily="@font/istok_web"
        android:gravity="center_vertical"
        android:text="@string/t_tmodification_d_une_t_che"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/titre_de_votre_t_che"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/modifierTitre"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/border_edit_text"
            android:hint="@string/titre"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/auteur_de_la_demande"/>
        <EditText
            android:textColor="@color/black"
            android:id="@+id/modifierAuteur"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/border_edit_text"
            android:hint="@string/auteur"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/description"/>
        <EditText
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:maxLength="128"
            android:textColor="@color/black"
            android:id="@+id/modifierDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:background="@drawable/border_edit_text"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/date_ch_ance"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:text="@string/prioriter"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:backgroundTint="@color/lowPrio"
                android:id="@+id/modifierdate"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/choisir_votre_date"
                />
            <Spinner
                android:id="@+id/modifierSpinner"
                android:textColor="@color/black"
                android:dropDownVerticalOffset="40dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="32dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/border_edit_text"
                />
        </LinearLayout>
        <Spinner
            android:id="@+id/spinnerEtat"
            android:textColor="@color/black"
            android:dropDownVerticalOffset="40dp"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/border_edit_text"
            />
        <Button
            android:id="@+id/buttonModifier"
            android:onClick="modifier"
            android:layout_marginTop="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modifier_une_t_che"
            android:backgroundTint="@color/lowPrio"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>